# groonga-and-optimizer

./: Makefile.am  README.md  configure.ac
expression_rewriters/: Makefile.am  and_optimizer.rb  sources.am
test/suite/: accessor.expected  accessor.test  accessor_multi.expected  accessor_multi.test  between.expected  between.test  column.expected  column.test  index_column.expected  index_column.test  int.expected  int.test  match_column_index_multi.expected  match_column_index_multi.test  match_column_index_single.expected  match_column_index_single.test  match_column_multi.expected  match_column_multi.test  match_column_single.expected  match_column_single.test  nested.expected  nested.test  prefix.expected  prefix.test  scorer_index_column.expected  scorer_index_column.test  selector_and_non_selector.expected  selector_and_non_selector.test  selector_index_column.expected  selector_index_column.test  tag_search.expected  tag_search.test
